# gl-ble-sdk

./: .gitignore  Doxyfile  Makefile  README.md
dfu/: README.md  gl-efr32mg21f512-ble-ncp-v4_2_0.gbl
files/etc/ble/: gl-efr32mg21f768-ble-ncp-v4_2_0.gbl
files/etc/config/: ble  gl_gattdb_cfg  gl_gattdb_cfg.json
files/etc/uci-defaults/: 30-ble-model-config
src/: CMakeLists.txt
src/bledriver/model_hw_cfg/: gl_hw_cfg.h
src/bledriver/silabs/: bg_errorcodes.h  bg_gattdb_def.h  bg_types.h  gecko_configuration.h  host_gecko.h  silabs_bleapi.c  silabs_bleapi.h  silabs_evt.c  silabs_evt.h  silabs_msg.c  silabs_msg.h  sl_bgapi.h  sl_bt_api.h  sl_bt_api_compatibility.h  sl_bt_ncp_host_api.c  sl_bt_types.h  sl_bt_version.h  sl_status.h  sli_bt_api.h  sli_bt_gattdb_def.h
src/bledriver/util/: gl_common.c  gl_common.h  gl_hal.c  gl_hal.h  gl_methods.h  gl_uart.c  gl_uart.h
src/components/dev_mgr/: gl_dev_mgr.c  gl_dev_mgr.h
src/components/log/: gl_log.c  gl_log.h
src/components/thread/: gl_thread.c  gl_thread.h
src/components/timestamp/: timestamp.c  timestamp.h
src/example/bleAdvExtended/: CMakeLists.txt  README.md  demo_bleAdvExtended.c
src/example/bleAdvLegacy/: CMakeLists.txt  README.md  demo_bleAdvLegacy.c
src/example/bleAdvPeriodic/: CMakeLists.txt  README.md  demo_bleAdvPeriodic.c
src/example/bleAdvertiser/: CMakeLists.txt  README.md  demo_bleAdvertiser.c
src/example/bleClient/: CMakeLists.txt  README.md  demo_bleClient.c
src/example/bleIbeacon/: CMakeLists.txt  README.md  demo_bleIbeacon.c  ibeacon.c  ibeacon.h  run_mode.c  run_mode.h  ubus.c  ubus.h  util.c  util.h
src/example/bleScanner/: CMakeLists.txt  README.md  demo_bleScanner.c
src/example/bleService/: CMakeLists.txt  README.md  demo_bleService.c
src/example/bleSynchronize/: CMakeLists.txt  README.md  demo_bleSynchronize.c
src/example/bletool/: CMakeLists.txt  README.md  demo_bletool.c
src/lib/: CMakeLists.txt  gl_bleapi.c
src/lib/include/: gl_bleapi.h  gl_errno.h  gl_type.h
